<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img3" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:layout_marginVertical="90dp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nombre"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/digiteNombre"
                android:textSize="20sp"
                android:textColor="@color/blanco"/>
            <EditText
            android:id="@+id/nombreEditText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/digiteNombreEdit"
            android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/apellido"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/digiteApellido"
                android:textSize="20sp"
                android:textColor="@color/blanco"/>
            <EditText
                android:id="@+id/apellidoEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteApellidoEdit"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/correo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/digiteCorreo"
                android:textSize="20sp"
                android:textColor="@color/blanco"/>
            <EditText
                android:id="@+id/correoEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteCorreoEdit"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/contraseña"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/digiteContraseña"
                android:textSize="20sp"
                android:textColor="@color/blanco"/>
            <EditText
                android:id="@+id/contraseñaEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteContraseñaEdit"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/botonCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="530dp"
        android:layout_marginEnd="70dp"
        android:text="crear cuenta"
        android:background="@color/negro"/>

</RelativeLayout>