<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservarCupoActivity">



    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img3" />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:srcCompat="@drawable/menu"
        android:background="#C49335"/>
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="200dp"
        android:text="Reservar cupo en el parquedaero"
        android:textSize="25sp"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        android:background="@color/negro"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/apellido"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Telefono"
                android:textSize="20sp"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/apellidoEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteApellidoEdit"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/correo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/digiteCorreo"
                android:textSize="20sp"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/correoEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteCorreoEdit"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/contraseña"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Placa"
                android:textSize="20sp"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/contraseñaEditText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteContraseñaEdit"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/contraseña1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="Tamaño del vehiculo"
                android:textSize="20sp"
                android:textColor="@color/blanco"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/contraseñaEditTexta"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/digiteContraseñaEdit"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reservar"
        android:layout_marginVertical="700dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>